--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,3 +1,6 @@
+limit_req_zone $binary_remote_addr zone=my_zone:10m rate=1r/m;
+limit_req_status 429;
+
 server {
     listen 80;
     server_name logan-hoogendijk.duckdns.org;
