handling rate limits

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,4 +1,9 @@
-limit_req_zone $binary_remote_addr zone=my_zone:10m rate=1r/m;
+map $request_method $limit {
+    default     "";
+    POST        $binary_remote_addr;
+}
+
+limit_req_zone $limit zone=my_zone:10m rate=5r/m;
 limit_req_status 429;
 
 server {
