handle rate limits

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -8,16 +8,16 @@ limit_req_status 429;
 
 server {
     listen 80;
-    server_name logan.hoogendijk;
+    server_name logan-hoogendijk.duckdns.org;
 
-    if ($host = logan.hoogendijk) {
+    if ($host = logan-hoogendijk.duckdns.org) {
         return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name logan.hoogendijk;
+    server_name logan-hoogendijk.duckdns.org;
 
     location / {
         proxy_pass http://myportfolio:5000/;
