--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,9 +1,4 @@
-map $request_method $limit {
-    default     "";
-    POST        $binary_remote_addr;
-}
-
-limit_req_zone $limit zone=my_zone:10m rate=5r/m;
+limit_req_zone $binary_remote_addr zone=my_limit:10m rate=1r/m;
 limit_req_status 429;
 
 server {
@@ -21,6 +16,11 @@ server {
 
     location / {
         proxy_pass http://myportfolio:5000/;
+    }
+
+    location /api/timeline_post {
+        limit req zone=my_limit;
+        proxy_pass http://myportfolio:5000/api/timeline_post;
     }
 
     # Load the certificate files
