--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -19,7 +19,7 @@ server {
     }
 
     location /api/timeline_post {
-        limit req zone=my_limit;
+        limit_req zone=my_limit;
         proxy_pass http://myportfolio:5000/api/timeline_post;
     }
 
