--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -20,7 +20,7 @@ server {
 
     location /api/timeline_post {
         limit_req zone=my_limit;
-        proxy_pass http://myportfolio:5000/api/timeline_post;
+        proxy_pass http://myportfolio:5000/timeline;
     }
 
     # Load the certificate files
