--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -18,7 +18,7 @@ server {
         proxy_pass http://myportfolio:5000/;
     }
 
-    location /api/timeline_post {
+    location /timeline {
         limit_req zone=my_limit;
         proxy_pass http://myportfolio:5000/timeline;
     }
