fixed timeline post error and changed html pages

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -18,9 +18,9 @@ server {
         proxy_pass http://myportfolio:5000/;
     }
 
-    location /timeline {
+    location /api/timeline_post {
         limit_req zone=my_limit;
-        proxy_pass http://myportfolio:5000/timeline;
+        proxy_pass http://myportfolio:5000/api/timeline_post;
     }
 
     # Load the certificate files
