--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -1,5 +1,5 @@
-limit_req_zone $binary_remote_addr zone=my_limit:10m rate=6r/m;
-limit_req_status 429;
+# limit_req_zone $binary_remote_addr zone=my_limit:10m rate=6r/m;
+# limit_req_status 429;
 
 server {
     listen 80;
@@ -18,9 +18,9 @@ server {
         proxy_pass http://myportfolio:5000/;
     }
 
-    location /api/timeline_post {
-        limit_req zone=my_limit;
-        proxy_pass http://myportfolio:5000/api/timeline_post;
+    # location /api/timeline_post {
+    #     limit_req zone=my_limit;
+    #     proxy_pass http://myportfolio:5000/api/timeline_post;
     }
 
     # Load the certificate files
