updated conf with new domain

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -5,14 +5,14 @@ server {
     listen 80;
     server_name logan-hoogendijk.duckdns.org;
 
-    if ($host = logan-hoogendijk.duckdns.org) {
+    if ($host = loganhoogendijk.live) {
         return 301 https://$host$request_uri;
     }
 }
 
 server {
     listen 443 ssl;
-    server_name logan-hoogendijk.duckdns.org;
+    server_name loganhoogendijk.live;
 
     location / {
         proxy_pass http://myportfolio:5000/;
