playing around w/ deployment test step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
   workflow_run:
-    workflows: ["Run Tests"]
-    types: [completed]
+    workflows: ["Run Tsts"]
+    types: [completed] #requested
+   workflow_dispatch:
 
 jobs:
   deploy:
