--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name logan-hoogendijk.duckdns.org;
+    server_name loganhoogendijk.live;
 
     if ($host = loganhoogendijk.live) {
         return 301 https://$host$request_uri;
