--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,12 +4,16 @@ on:
   push:
     branches:
       - main
+  workflow_run:
+    workflows: ["Run Tests"]
+    types: [completed] #requested
   workflow_dispatch:
 
 jobs:
   deploy:
     name: "Deploy to VPS"
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Configure SSH
         run: |
